<resources>
    <string name="app_name">OrderMatic</string>
    <string name="logo">Logo</string>
    <string name="name_des_inhabers">Name des Inhabers</string>
    <string name="strasse_hausnummer">Straße, Hausnummer</string>
    <string name="ort">Ort</string>
    <string name="admin_passwort">Admin Passwort</string>
    <string name="admin_passwort_confirm">Admin-Passwort bestätigen</string>
    <string name="passwort_bestaetigen">Passwort bestätigen</string>
    <string name="passwort">Passwort</string>
    <string name="registrieren">Registrieren</string>
    <string name="anmelden">Anmelden</string>
    <string name="description_logo_complete">Wort-/Bildmarke der App</string>
    <string name="login_hint">Email des Betriebs</string>
    <string name="email">E-Mail Adresse</string>
    <string name="name_des_betriebs">Name des Betriebs</string>
    <string name="adresszeile1">Adresszeile 1</string>
    <string name="adresszeile2">Adresszeile 2</string>
    <string name="cp_id_notification"> Bitte bewahren Sie die Betriebs-ID gut auf, um Dritten nicht ungewollten Zugang zu Ihren  Betriebsinformationen zu verschaffen.</string>
    <string name="not_defined">Not defined</string>
    <string name="icondescription">Icon für die toolbar</string>
    <string name="admin_button">Admin</string>
    <string name="service_button">Service</string>
    <string name="küche_button">Küche</string>
    <string name="bar_button">Bar</string>
    <string name="personen_button">Personen</string>
    <string name="getraenke_button">Getränke</string>
    <string name="vorspeisen_button">Vorspeisen</string>
    <string name="hauptspeisen_button">Hauptspeisen</string>
    <string name="desserts_button">Desserts</string>
    <string name="neuePersonAnlegen">Neue Person anlegen</string>
    <string name="namePersonFeld">Name</string>
    <string name="nameDerPerson">Name der Person:</string>
    <string name="passwortPerson">Passwort eingeben:</string>
    <string name="altespasswortPerson">Altes Passwort eingeben:</string>
    <string name="neuespasswortPerson">Neues Passwort eingeben:</string>
    <string name="neuespasswort">Neues Passwort</string>
    <string name="altespasswort">Altes Passwort</string>
    <string name="passwortPersonBestaetigen">Passwort bestätigen:</string>
    <string name="auswahlRolle">Rolle auswählen:</string>
    <string name="editierungsmenu">Bearbeiten</string>
    <string name="personAnlegen">Person anlegen</string>
    <string name="adminLogin">Admin Login</string>
    <string name="adminLoginText">Bitte Admin Passwort eingeben:</string>
    <string name="aktuelleBestellungen">Aktuelle Bestellungen</string>
    <string name="abgeschlosseneBestellungen">Abgeschlossene Bestellungen</string>
    <string name="bestellungen">Bestellungen</string>
    <string name="uebersichtBestellungen">Bestellungsübersicht</string>
    <string name="speisekarteAnzeigen">Speisekarte anzeigen</string>
    <string name="profilBearbeiten">Profil bearbeiten</string>
    <string name="aenderungenBestaetigen">Änderungen bestätigen</string>
    <string name="button_for_kitchen_role">button for kitchen role</string>
    <string name="button_for_service_role">button for service role</string>
    <string name="button_for_bar_role">button for bar role</string>
    <string name="button_for_delete_person">button for delete person</string>
    <string name="neuerEintrag">Neuer Eintrag</string>
    <string name="speichern">Speichern</string>
    <string name="loeschen">Löschen</string>
    <string name="Eintragloeschen">Eintrag löschen</string>
    <string name="edit_button">Bearbeiten</string>
    <string name="addPerson">Profil anlegen</string>
    <string name="create_new_table">Neuer Tisch</string>
    <string name="logoutProfile">Logout</string>
    <string name="Menu">Übersicht</string>
    <string name="drinks">Getränke</string>
    <string name="starters">Vorspeisen</string>
    <string name="mainDishes">Hauptspeisen</string>
    <string name="desserts">Desserts</string>
    <string name="saveTable">Erstellen</string>
    <string name="createTable">Neuer Tisch</string>
    <string name="dashboard">Dashboard</string>
    <string name="newTable">Bedienung starten </string>
    <string name="Button_WhatWasOrdered">Was wurde bestellt?</string>
    <string name="Button_Send">Senden</string>
    <string name="Button_Pay">Bezahlen</string>
    <string name="pay_bar">Bargeld</string>
    <string name="pay_card">EC-Karte</string>
    <string name="hint_header_text">Intent</string>
    <string name="hint_pname">pname</string>
    <string name="newDish">neues Gericht</string>
    <string name="tisch_bezeichnung">Tisch Bezeichnung</string>
    <string name="logout">Logout</string>
    <string name="company_name">company_name</string>
    <string name="checkbox">auswählen</string>
    <string name="showOrder">Bestellung</string>
    <string name="sendOrder">Senden</string>
    <string name="payOrder">Bezahlen</string>
    <string name="aktiveBestellungen">Aktive Bestellungen</string>
    <string name="currency">€</string>
    <string name="whatWasOrdered">Was wurde bestellt?</string>
    <string name="hinzufügen">Hinzufügen</string>
    <string name="chooseAll">Alles auswählen</string>

</resources>